crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_true.snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Bool,
    ),
    4,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: None,
    },
)
