crates/yajlir/src/parser/snapshots/yajlir__parser__lexer__tests__lex_case_x.snap
---
source: crates/yajlir/src/parser/lexer.rs
expression: "(token, offset, lexer)"
---
(
    Ok(
        Error,
    ),
    1,
    Lexer {
        allow_comments: false,
        validate_utf8: true,
        error: Some(
            InvalidChar,
        ),
    },
)
